--- a/.config
+++ b/.config
@@ -1,5 +1,5 @@
 #
-# Automatically generated file;  do v1  DO NOT EDIT.
+# Automatically generated file;  do v1  DO NOT EDIT. 20210131
 # OpenWrt Configuration
 #
 CONFIG_MODULES=y
@@ -6268,131 +6268,4 @@ CONFIG_PACKAGE_libjson-script=y
 # CONFIG_PACKAGE_mt-st is not set
 # CONFIG_PACKAGE_namei is not set
 # CONFIG_PACKAGE_nand-utils is not set
-# CONFIG_PACKAGE_netopeer2-cli is not set
-# CONFIG_PACKAGE_netopeer2-keystored is not set
-# CONFIG_PACKAGE_netopeer2-server is not set
-# CONFIG_PACKAGE_netwhere is not set
-# CONFIG_PACKAGE_nnn is not set
-# CONFIG_PACKAGE_nsenter is not set
-# CONFIG_PACKAGE_nss-utils is not set
-# CONFIG_PACKAGE_oath-toolkit is not set
-# CONFIG_PACKAGE_open-plc-utils is not set
-# CONFIG_PACKAGE_open2300 is not set
-# CONFIG_PACKAGE_openobex is not set
-# CONFIG_PACKAGE_openobex-apps is not set
-# CONFIG_PACKAGE_openocd is not set
-# CONFIG_PACKAGE_opensc-utils is not set
-CONFIG_PACKAGE_openssl-util=y
-# CONFIG_PACKAGE_openzwave is not set
-# CONFIG_PACKAGE_openzwave-config is not set
-# CONFIG_PACKAGE_owipcalc is not set
-# CONFIG_PACKAGE_pciutils is not set
-# CONFIG_PACKAGE_pcsc-tools is not set
-# CONFIG_PACKAGE_pcscd is not set
-# CONFIG_PACKAGE_powertop is not set
-# CONFIG_PACKAGE_pps-tools is not set
-# CONFIG_PACKAGE_prlimit is not set
-# CONFIG_PACKAGE_procps-ng is not set
-# CONFIG_PACKAGE_progress is not set
-# CONFIG_PACKAGE_prometheus is not set
-# CONFIG_PACKAGE_prometheus-node-exporter-lua is not set
-# CONFIG_PACKAGE_prometheus-statsd-exporter is not set
-# CONFIG_PACKAGE_pservice is not set
-# CONFIG_PACKAGE_pv is not set
-# CONFIG_PACKAGE_qmi-utils is not set
-# CONFIG_PACKAGE_qrencode is not set
-# CONFIG_PACKAGE_quota is not set
-# CONFIG_PACKAGE_ravpower-mcu is not set
-# CONFIG_PACKAGE_rclone is not set
-# CONFIG_PACKAGE_readsb is not set
-# CONFIG_PACKAGE_relayctl is not set
-# CONFIG_PACKAGE_rename is not set
-# CONFIG_PACKAGE_restic is not set
-# CONFIG_PACKAGE_rng-tools is not set
-# CONFIG_PACKAGE_rtl-ais is not set
-# CONFIG_PACKAGE_rtl-sdr is not set
-# CONFIG_PACKAGE_rtl_433 is not set
-# CONFIG_PACKAGE_runc is not set
-# CONFIG_PACKAGE_sane-backends is not set
-# CONFIG_PACKAGE_sane-daemon is not set
-# CONFIG_PACKAGE_sane-frontends is not set
-# CONFIG_PACKAGE_sed is not set
-# CONFIG_PACKAGE_serdisplib-tools is not set
-# CONFIG_PACKAGE_setserial is not set
-# CONFIG_PACKAGE_shadow-utils is not set
-CONFIG_PACKAGE_shellsync=y
-# CONFIG_PACKAGE_sispmctl is not set
-# CONFIG_PACKAGE_slide-switch is not set
-# CONFIG_PACKAGE_smartd is not set
-# CONFIG_PACKAGE_smartd-mail is not set
-# CONFIG_PACKAGE_smartmontools is not set
-# CONFIG_PACKAGE_smartmontools-drivedb is not set
-# CONFIG_PACKAGE_smstools3 is not set
-# CONFIG_PACKAGE_sockread is not set
-# CONFIG_PACKAGE_spi-tools is not set
-# CONFIG_PACKAGE_spidev-test is not set
-# CONFIG_PACKAGE_ssdeep is not set
-# CONFIG_PACKAGE_sshpass is not set
-# CONFIG_PACKAGE_strace is not set
-CONFIG_STRACE_NONE=y
-# CONFIG_STRACE_LIBDW is not set
-# CONFIG_STRACE_LIBUNWIND is not set
-# CONFIG_PACKAGE_stress is not set
-# CONFIG_PACKAGE_sumo is not set
-# CONFIG_PACKAGE_syncthing is not set
-# CONFIG_PACKAGE_sysrepo is not set
-# CONFIG_PACKAGE_sysrepocfg is not set
-# CONFIG_PACKAGE_sysrepoctl is not set
-# CONFIG_PACKAGE_sysstat is not set
-# CONFIG_PACKAGE_tar is not set
-# CONFIG_PACKAGE_taskwarrior is not set
-# CONFIG_PACKAGE_telldus-core is not set
-# CONFIG_PACKAGE_temperusb is not set
-# CONFIG_PACKAGE_tesseract is not set
-# CONFIG_PACKAGE_tini is not set
-# CONFIG_PACKAGE_tracertools is not set
-# CONFIG_PACKAGE_tree is not set
-# CONFIG_PACKAGE_triggerhappy is not set
-CONFIG_PACKAGE_ubi-utils=y
-# CONFIG_PACKAGE_udns-dnsget is not set
-# CONFIG_PACKAGE_udns-ex-rdns is not set
-# CONFIG_PACKAGE_udns-rblcheck is not set
-# CONFIG_PACKAGE_ugps is not set
-# CONFIG_PACKAGE_uledd is not set
-# CONFIG_PACKAGE_unshare is not set
-# CONFIG_PACKAGE_usb-modeswitch is not set
-# CONFIG_PACKAGE_usbreset is not set
-# CONFIG_PACKAGE_usbutils is not set
-# CONFIG_PACKAGE_uuidd is not set
-# CONFIG_PACKAGE_uuidgen is not set
-# CONFIG_PACKAGE_uvcdynctrl is not set
-# CONFIG_PACKAGE_v4l-utils is not set
-# CONFIG_PACKAGE_view1090 is not set
-# CONFIG_PACKAGE_viewadsb is not set
-# CONFIG_PACKAGE_watchcat is not set
-# CONFIG_PACKAGE_whereis is not set
-# CONFIG_PACKAGE_which is not set
-# CONFIG_PACKAGE_whiptail is not set
-# CONFIG_PACKAGE_wifitoggle is not set
-# CONFIG_PACKAGE_wipe is not set
-# CONFIG_PACKAGE_xsltproc is not set
-# CONFIG_PACKAGE_xxd is not set
-# CONFIG_PACKAGE_yanglint is not set
-# CONFIG_PACKAGE_yara is not set
-# CONFIG_PACKAGE_ykpers is not set
-CONFIG_PACKAGE_smartdns=y
-CONFIG_PACKAGE_luci-app-smartdns=y
-CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
-
-# end of Utilities
-
-#
-# Xorg
-#
-
-#
-# Font-Utils
-#
-# CONFIG_PACKAGE_fontconfig is not set
-# end of Font-Utils
-# end of Xorg
+# CONFIG_PACKAGE_netope
