--- a/.config
+++ b/.config
@@ -1,5 +1,5 @@
 #
-# Automatically generated file;  do v1  DO NOT EDIT. 20210131
+# Automatically generated file;  do 0131  DO NOT EDIT. 
 # OpenWrt Configuration
 #
 CONFIG_MODULES=y
