--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file;  do 0131  DO NOT EDIT. 
-# OpenWrt Configuration
+# OpenWrt Configuration 20210609
 #
 CONFIG_MODULES=y
 CONFIG_HAVE_DOT_CONFIG=y
